--- a/checkout.html
+++ b/checkout.html
@@ -415,7 +415,7 @@
 					</div>
 					</div>
 					<div class="col-sm-7">
-						<div class="m-content">
+						<div class="">
 					<div class="m-portlet m-portlet--mobile">
 							<div class="m-portlet__head ad_more">
 								<div class="m-portlet__head-caption">
@@ -429,7 +429,7 @@
 							</div>
 							<div class="m-portlet__body">
 								<div class="m-portlet m-portlet--tab">
-								<div class="m-portlet__head">
+								<!-- <div class="m-portlet__head">
 									<div class="m-portlet__head-caption">
 										<div class="m-portlet__head-title">
 											<span class="m-portlet__head-icon m--hide">
@@ -476,9 +476,26 @@
 											</ul>
 										</div>
 
+								</div> -->
+
+
+
+								<div class="row pt-4 pl-4">
+									<div class="col-sm-5">
+										<h5 class="pt-4" style="vertical-align: center;"><img src="assets/app/media/img/icons/like.png" class="p-1">	New Payment Card</h5>
+									</div>
+									<div class="col-sm-7">
+										<div class="d-block ">
+										<img src="assets/app/media/img/icons/visa.png" class="">
+										<img src="assets/app/media/img/icons/mastercard.png" class="">		
+										<img src="assets/app/media/img/icons/paypal.png" class="">	
+										<img src="assets/app/media/img/icons/any.png" class="">
+										<img src="assets/app/media/img/icons/any.png" class="">	
+										</div>
+									</div>
 								</div>
 								<!--begin::Form-->
-								<form class="m-form m-form--fit m-form--label-align-right">
+								<form class="m-form m-form--fit m-form--label-align-right pt-0">
 									<div class="m-portlet__body">
 										<div class="form-group m-form__group">
 											<label>
