--- a/checkout.html
+++ b/checkout.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>
-			Courses | Airvistara  E-learning
+			Checkout | Airvistara  E-learning
 		</title>
 		<meta name="description" content="Latest updates and statistic charts">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -558,9 +558,9 @@
 										
 										<div class="m-portlet__foot m-portlet__foot--fit">
 										<div class="m-form__actions">
-											<button type="reset" class="btn btn-brand">
+											<a href="successful.html"><button type="button" class="btn btn-brand">
 												Complete Payment
-											</button>
+											</button></a>
 											<button type="reset" class="btn btn-secondary">
 												Cancel
 											</button>
