--- a/successful.html
+++ b/successful.html
@@ -133,7 +133,7 @@ body {
   <div class="text-center"><h1>Success!</h1></div>
   <p class="text-center">Your payment has been successfully received</p>
   <div class="modal-footer pb-0 m-0 justify-content-center border-0">
-    <a href="index.html" class="btn btn-brand">Continue</a>
+    <a href="payment_gateway.html" class="btn btn-brand">Continue</a>
    <!--  <div class="conf-but" onClick="">No</div>   --> 
   </div>
 </div>			
